expanded on services
added tce (treatment cost estimator) package